@@ -39,7 +39,7 @@ all : $(BINDIR)/gnfs-lasieve4I12e $(BINDIR)/gnfs-lasieve4I13e \
 asm/%: force
 	$(MAKE) -C asm $*
 
-%.o: %.c lasieve.h asm/lasieve-asm.h
+%.o: %.c lasieve.h asm/siever-config.h
 	$(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
 %.o: %.s
@@ -47,20 +47,20 @@ asm/%: force
 
 input-poly.o: lasieve.h
 
-recurrence6.o: recurrence6.c lasieve.h asm/lasieve-asm.h
+recurrence6.o: recurrence6.c lasieve.h asm/siever-config.h
 	$(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
 redu2.o: lasieve.h
 
 primgen32.o ../fbgen.o: lasieve.h
 
-gnfs-lasieve4eI12.o: gnfs-lasieve4e.c lasieve.h asm/lasieve-asm.h
+gnfs-lasieve4eI12.o: gnfs-lasieve4e.c lasieve.h asm/siever-config.h
 	$(CC) $(CFLAGS) $(INC) -c -DI_bits=12 -o $@ $<
 
-gnfs-lasieve4eI13.o: gnfs-lasieve4e.c lasieve.h asm/lasieve-asm.h
+gnfs-lasieve4eI13.o: gnfs-lasieve4e.c lasieve.h asm/siever-config.h
 	$(CC) $(CFLAGS) $(INC) -c -DI_bits=13 -o $@ $<
 
-gnfs-lasieve4eI14.o: gnfs-lasieve4e.c lasieve.h asm/lasieve-asm.h
+gnfs-lasieve4eI14.o: gnfs-lasieve4e.c lasieve.h asm/siever-config.h
 	$(CC) $(CFLAGS) $(INC) -c -DI_bits=14 -o $@ $<
 
 libgmp-aux.a: gmp-aux.o mpz-ull.o
